corrected close button, changed date on new article; MVP & Stretch met

--- a/Article/Article.less
+++ b/Article/Article.less
@@ -45,3 +45,7 @@
   // height: 400px;
   height: auto; //changed so that all paragraphs can be read.
 }
+
+.hide-btn {
+  display: none;
+}
